	* src/daemon/spawner.c: rename functions with lower case, also, name
	callbacks to reflect their subsystem relationships.
	* src/daemon/spawner.c: Extract out Entranced_Display subsystem
	into entranced_display.c and Entranced_Display.h
	* src/daemon/spawner.c: Make private functions static and remove them from
	the Entranced.h header file, since no one else uses them.
2003-10-24 Ibukun Olumuyiwa <ibukun@computer.org>
	* src/daemon/spawner.c: Rewrite complete, spawner
    now works fairly reliably
	* configure.in: Changed ecore checks, added check for
	OpenGL engine support

2003-10-22 Corey Donohoe <atmos@atmos.org>
	* src/client: Support for user faces added

2003-10-21 Corey Donohoe <atmos@atmos.org>
	* src/client: Implement new session management method
	with config ability

2003-10-19 Ibukun Olumuyiwa <ibukun@computer.org>
	* src/client: OpenGL engine support added

2003-10-14 Carsten Haitzler <raster@rasterman.com>
	* data/themes/default: New default theme

2003-07-25 Ibukun Olumuyiwa <ibukun@computer.org>
	* src/daemon/spawner.c: Attempt to fix race
	conditions in process signaling

2003-07-24 Corey Donohoe <atmos@atmos.org>
	* src/client: Port UI to Edje, new default theme
	created

2003-05-26 Ibukun Olumuyiwa <ibukun@computer.org>
	* configure.in: Check for shadow functions in
	-lcrypt before -lshadow as some systems do not
	have the latter
	* data/themes/matrix0/Makefile.am: Update font entries
	to reflect change in theme

2003-05-26 Tilman Sauerbeck <tilman@code-monkey.de>
	* configure.in: Revert to standard checking for
	libs instead of pkg-config

2003-05-06 Tilman Sauerbeck <tilman@code-monkey.de>
    * output info/error messages/warnings to syslog
	instead of stdout/stderr

2003-05-05 Tilman Sauerbeck <tilman@code-monkey.de>
    * src/client/entrance_theme.c entrance_theme_parse():
    changed the theme format.
    added color_parse() offset_parse() size_parse() pos_parse()

2003-05-02 Tilman Sauerbeck <tilman@code-monkey.de>